?:
    Fixed ticket #44 and allowed support for Xen multiple interfaces and aliased
    interfaces.  Supports both Linux and *BSD.

1.3.8:
    Fixed Rdoc::usage bug on CentOS 5 - closed Puppet #753 and Facter #40

    Added support to return multiple interfaces and their IP addresses and 
    MAC addressess as facts. Returns interface_interfacename and 
    macaddress_interfacename.  Existing ipaddress and macaddress facts are 
    unchanged and still returned.  Currently Linux only.  Closes #6.
 
    Added macaddress fact support for FreeBSD and OpenBSD - closes #37

    Added hardwareisa support for *BSD platforms - closed #38

    Facter now detects the Mandriva distribution - closes #39

    Facter now correctly detects ipaddress on NetBSD - closes #42

1.3.7:
    A couple of small bugfixes, including fixing Facter.flush so it correctly
    flushes cached values, and the mac address fact only returns one
    value, not all of them.

    Converted all of the fact names to symbols, rather than the somewhat
    random case used previously.  When the facts are converted to a hash,
    they still convert the fact name to a string.

1.3.6:
    A bugfix release, including fixes for #29, and #30.  Also fixed
    the SSH keys so they only have the key, not the type or description.

1.3.5:
    A bugfix release.

1.3.4:
    Added many new facts, including LSB facts.

    Fixed a few small bugs, notably the error you could get when asking
    for a non-existent fact.

1.3.3:
    Added thread exclusivity to memory and processor facts.

    Added the ability to retrieve facts by pulling them out of the shell
    environment.

1.3.2:
    Temporarily disabled memory and processor facts since they might cause hangs.

1.3.1:
    Fixed autoloading so that it catches any errors in loaded libraries.

1.3:
    Significant internal refactoring, such as replacing 'tag' with 'confine', and
    reusing 'tag' for semantic purposes.

    Made autoloading of facts better.

1.2.1: