@@ -2,6 +2,8 @@
     Fixed ticket #44 and allowed support for Xen multiple interfaces and aliased
     interfaces.  Supports both Linux and *BSD.
 
+    Added interfaces fact to add as index for ip/MAC address facts
+
 1.3.8:
     Fixed Rdoc::usage bug on CentOS 5 - closed Puppet #753 and Facter #40
 
